[package]
name = "oor-nmea0183"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Convert NMEA0183 sentences"
homepage = "https://github.com/openoceanrobotics"
repository = "https://github.com/openoceanrobotics/oor-nmea0184"

[dependencies]
chrono = "0.4.42"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
uom = "0.37.0"

[dev-dependencies]
approx = "0.5.1"
